--- a/qflutter_test_app/pubspec.yaml
+++ b/qflutter_test_app/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
+  dio: ^4.0.0
+  sqflite: ^1.3.0
+  path_provider: ^2.0.1
+  get_it: ^7.1.3
+  rxdart: ^0.27.0
 
 dev_dependencies:
   flutter_test:
